objects/ccrz__E_OrderItem__c.object
<CustomObject>
    <description>The E_OrderItem__c object contains the line level detail of placed orders.</description>
    <fields>
        <fullName>ccrz__AbsoluteDiscount__c</fullName>
        <description>When a coupon has been applied to the order this field contains the discount amount applied with that coupon. This field is for reference only and is not used in calculations.</description>
        <label>Absolute Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentAmount__c</fullName>
        <description>Pricing adjustment amount applied to this line. This field is normally set when the pricing extension adjusts individual line amounts.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessage__c</fullName>
        <description>Availability message as carried through from the product at the time the item was placed in the cart.</description>
        <label>Availability Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a product was placed into a cart in the context of viewing a category this contains the reference to that category.</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>E_OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Cart line comments as applied to this item.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a coupon has been applied to the order this field contains a reference to that coupon.</description>
        <label>Coupon</label>
        <referenceTo>ccrz__E_Coupon__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>E_OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When this line refers to a product that is part of an aggregate product this field contains a reference to the parent aggregate product.</description>
        <label>Display Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Order Items (Display Product)</relationshipLabel>
        <relationshipName>CC_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtName__c</fullName>
        <description>Defines a display Name to be used instead of the referenced Product Name for display in the cart/order.</description>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtSKU__c</fullName>
        <description>Defines a display SKU to be used instead of the referenced Product SKU for display in the cart/order.</description>
        <label>External SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True or false value indicating whether or not this order item is a subscription.</description>
        <inlineHelpText>True or false value indicating whether or not this order item is a subscription.</inlineHelpText>
        <label>Is Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemLabel__c</fullName>
        <description>Deprecated</description>
        <label>Item Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemStatus__c</fullName>
        <description>Reserved for future use.</description>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Pre-Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ItemTotal__c</fullName>
        <description>AdjustmentAmount__c + SubAmount__c</description>
        <formula>ccrz__AdjustmentAmount__c  +  ccrz__SubAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Next_Subscription_Date__c</fullName>
        <description>Determines when the next order is placed for this Order Item, if this order item is in fact, a subscription.</description>
        <inlineHelpText>Determines when the next order is placed for this Order Item, if this order item is in fact, a subscription.</inlineHelpText>
        <label>Next Subscription Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderItemGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Order Item Group that the item belongs to. Used for Line Level Independence.</description>
        <label>Order Item Group</label>
        <referenceTo>ccrz__E_OrderItemGroup__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>E_OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderItemId__c</fullName>
        <description>Reference id for external systems.</description>
        <externalId>true</externalId>
        <label>Order Item Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderItemStatus__c</fullName>
        <description>Status field at the line level. The initial value is always Order Submitted. Other values are non-functional and can be used by external systems for post-order placement status tracking.</description>
        <label>Order Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancel Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Return Submitted</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Partial Shipped</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__OrderLineType__c</fullName>
        <description>Either Major or Minor. Minor if this line item is part of a kit or bundle, otherwise Major.</description>
        <label>Order Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Order__c</fullName>
        <description>The order that this order line is a part of.</description>
        <label>Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>E_OrderItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalItemPrice__c</fullName>
        <description>The original price of the item before any modifiers were applied</description>
        <label>Original Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalQuantity__c</fullName>
        <description>The purpose of this field is to store the appropriate quantity of line items that have products in the form of parent and child like bundles kits and dynamic kits</description>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentOrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When this line item is part of a kit or bundle then this refers to the order line of that kit or bundle.</description>
        <label>Parent Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When this line item is part of a kit or bundle then this refers to the product that is the kit or bundle.</description>
        <label>Parent Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Order Items (ParentProductID)</relationshipLabel>
        <relationshipName>E_OrderItems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PercentDiscount__c</fullName>
        <description>When a coupon has been applied this will be the percent discount that was used to calculate the item subtotal.</description>
        <label>Percent Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccrz__Price__c</fullName>
        <description>The price of the product at the time the item was ordered.</description>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__PricingModifierTypes__c</fullName>
        <description>Semi-Colon delimited List of Modifier types that are affecting the pricing of this Order Item.</description>
        <inlineHelpText>Semi-Colon delimited List of Modifier types that are affecting the pricing of this Order Item.</inlineHelpText>
        <label>Pricing Modifier Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PricingType__c</fullName>
        <description>Defines how B2B Commerce internally handles the pricing for this cart/order item. If &apos;external&apos; then B2B Commerce pricing will not apply to the cart item (see further documentation for exact rules).</description>
        <externalId>true</externalId>
        <label>Pricing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PrimaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary CC Attribute selected for the related product</description>
        <label>Primary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Order Items</relationshipLabel>
        <relationshipName>ccOrderItemsPrim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductType__c</fullName>
        <description>Copied product type from the Product this line refers to, e.g. Product.</description>
        <label>ProductType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product_Name__c</fullName>
        <description>Product__r.Name</description>
        <formula>ccrz__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the product for this line.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Order Items (ProductID)</relationshipLabel>
        <relationshipName>E_OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <description>The number of items ordered for this line.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPriceSubAmt__c</fullName>
        <description>Sub total for the recurring price</description>
        <label>Recurring Price Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPrice__c</fullName>
        <description>The recurring price portion of a subscription</description>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RequestDate__c</fullName>
        <description>The request date for this line item. This will be the same value as at the order header.</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__SecondaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The secondary attribute selected for the order item&apos;s related cc product</description>
        <label>Secondary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Order Items (Secondary Attribute)</relationshipLabel>
        <relationshipName>ccOrderItemsSec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SelectedAttr__c</fullName>
        <description>Attributes Selected for the Order Item&apos;s Related Product. Data is in JSON Form.</description>
        <label>Selected Attributes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Seller this Order Item was purchased from.</description>
        <label>Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC Order Items</relationshipLabel>
        <relationshipName>E_OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SplitSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When an order is split this field represents the source order item from which this order item originated.</description>
        <label>Split Source</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>Split Items</relationshipLabel>
        <relationshipName>ItemSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__StoreId__c</fullName>
        <description>The storefront name for this line. This will be the same value as at the order header.</description>
        <label>Store Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubAmount__c</fullName>
        <description>The sub-total amount for the order. This will be calculated as price * quantity - coupon adjustments during order placement.</description>
        <label>Sub Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__SubProdTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specific SubProdTerm associated with this order item.</description>
        <label>CC SubProdTerm</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC Order Items</relationshipLabel>
        <relationshipName>CC_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionId__c</fullName>
        <description>Subscription Id</description>
        <formula>IF( ccrz__Is_Subscription__c , &quot;S-&quot;&amp; Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubscriptionId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a subscription is renewed when the subscription end date is reached.  This field is carried over from the Is_Subscription_Auto_Renewal field on the Product when the original order is placed.</description>
        <inlineHelpText>Determines if a subscription is renewed when the subscription end date is reached.  This field is carried over from the Is_Subscription_Auto_Renewal field on the Product when the original order is placed.</inlineHelpText>
        <label>Subscription Auto Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The length in months that this subscription lasts.  Only applicable for Order Items that are subscriptions.</description>
        <inlineHelpText>The length in months that this subscription lasts.  Only applicable for Order Items that are subscriptions.</inlineHelpText>
        <label>Subscription Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_End_Date__c</fullName>
        <description>Determines when the subscription ends.  Depending on the subscriber, this field is calculated from based on date the order is placed and the subscription duration.  Additionally, if this date is met, and Subscription Auto Renewal is set to true, then the end date is extended.  If the date is met, and Subscription Auto Renewal is set to false, then the subscription status is updated and the subscription is expired.</description>
        <inlineHelpText>Determines when the subscription ends, or if the this subscription is set to auto renew, then the subscription end date is extended.</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Frequency__c</fullName>
        <description>Determines how often a new order is placed, in months, if this Order Item is a subscription.</description>
        <inlineHelpText>Determines how often a new order is placed, in months, if this Order Item is a subscription.</inlineHelpText>
        <label>Subscription Frequency</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Start_Date__c</fullName>
        <description>The date this subscription started.</description>
        <inlineHelpText>The date this subscription started.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Status__c</fullName>
        <description>The status of the subscription, if this order item is a subscription.</description>
        <inlineHelpText>The status of the subscription, if this order item is a subscription.</inlineHelpText>
        <label>Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Reordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__TertiaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Tertiary Attribute selected for the Cart Item&apos;s Related Product</description>
        <label>Tertiary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Order Items (Tertiary Attribute)</relationshipLabel>
        <relationshipName>ccOrderItemsTert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasure__c</fullName>
        <description>Unit of measure copied from the product.</description>
        <label>Unit Of Measure</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>CC Order Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>OrderItemAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>